# chat-service-api

./: .gitignore  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
examples/: client.go  client.py
src/chat_go/: api.go
src/chat_go/grpc/: chat.pb.go  chat.pb.gw.go  chat_grpc.pb.go
src/chat_service_api/: __init__.py  api.py
src/chat_service_api/grpc/: chat_grpc.py  chat_grpc.py-e  chat_pb2.py  chat_pb2.pyi
src/chat_service_api_js/: api.ts  interface.ts  main.ts
src/chat_service_api_js/grpc/: chat_connect.d.ts  chat_connect.js  chat_grpc_web_pb.js  chat_pb.d.ts  chat_pb.js  chat_pb_service.d.ts  chat_pb_service.js
src/chat_service_api_js/grpc/google/api/: annotations_pb.d.ts  annotations_pb.js  client_pb.d.ts  client_pb.js  field_behavior_pb.d.ts  field_behavior_pb.js  field_info_pb.d.ts  field_info_pb.js  http_pb.d.ts  http_pb.js  httpbody_pb.d.ts  httpbody_pb.js  launch_stage_pb.d.ts  launch_stage_pb.js  resource_pb.d.ts  resource_pb.js  visibility_pb.d.ts  visibility_pb.js
src/chat_service_api_js/grpc/google/bytestream/: bytestream_connect.d.ts  bytestream_connect.js  bytestream_pb.d.ts  bytestream_pb.js
src/chat_service_api_js/grpc/google/longrunning/: operations_connect.d.ts  operations_connect.js  operations_pb.d.ts  operations_pb.js
src/chat_service_api_js/grpc/google/rpc/: code_pb.d.ts  code_pb.js  error_details_pb.d.ts  error_details_pb.js  status_pb.d.ts  status_pb.js
src/chat_service_api_js/grpc/google/type/: calendar_period_pb.d.ts  calendar_period_pb.js  color_pb.js  (+31 more)
src/proto/: buf.gen.yaml  chat.proto
(+24 files in other folders)
